커밋두번째

--- a/test2.html
+++ b/test2.html
@@ -8,11 +8,8 @@
     <link href=".css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-안녕하세요
-dkasjdkjaskjdjs
-한 번 더 해볼까요
-다시 저장한다고
-안녕하세요 
-이잉;'니;이;니;ㅣ;ㅣ;'
+테스트2입니다
+ㅇㅇㅇ
+
 </body>
 </html>
