--- a/junsun.html
+++ b/junsun.html
@@ -8,11 +8,7 @@
     <link href=".css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-안녕하세요
-dkasjdkjaskjdjs
-한 번 더 해볼까요
-다시 저장한다고
-안녕하세요 
-이잉;'니;이;니;ㅣ;ㅣ;'
+이준선입니다
+커밋하기
 </body>
 </html>
